# dvm-leanix

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: architecture.md  developer.md  graphql-api.md  publishing.md  summary.md  temp.md  walkthrough.md
src/lean_ix/: __init__.py  _library_help.py  _version.py  diagnose.py  download.py  graphiql.py  main.py  persistence.py  server.py  token.py
