[project]
name = "dvm-leanix"
version = "0.3.2"
description = "SAP LeanIX GraphQL proxy with browser token extraction via Playwright"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Divya Van Mahajan", email = "divya.van.mahajan@volvo.com" },
]
keywords = ["leanix", "graphql", "proxy", "sap", "enterprise-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "playwright>=1.49",
]

[project.urls]
Homepage = "https://github.com/divyavanmahajan/dvm-leanix"
Source = "https://github.com/divyavanmahajan/dvm-leanix"
"Bug Tracker" = "https://github.com/divyavanmahajan/dvm-leanix/issues"

[project.scripts]
dvm-leanix = "lean_ix.main:main"
lean-ix = "lean_ix.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lean_ix"]
